--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ h2 {
   height: calc(100% - 153px);
 }
 
+#ArticleLoading {
+	clear: left, right;
+}
+
 .input{
   text-indent: 3px;
   margin-left: 10px;
