--- a/css/style.css
+++ b/css/style.css
@@ -294,8 +294,14 @@ del{
   word-wrap: break-word;
 }
 
-#loading{
+#article_loading{
   margin: auto;
+}
+
+#article_loading img{
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
 }
 
 .ui-tabs .ui-tabs-nav li a{
