--- a/css/style.css
+++ b/css/style.css
@@ -294,14 +294,18 @@ del{
   word-wrap: break-word;
 }
 
-#article_loading{
-  margin: auto;
+.full_div_loading img{
+	margin: auto;
+	display: block;
 }
 
-#article_loading img{
-	margin-left: auto;
-	margin-right: auto;
-	display: block;
+div.full_div_loading{
+	top: 0;
+	left: 0;
+	position: absolute !important;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.10)
 }
 
 .ui-tabs .ui-tabs-nav li a{
